# Powhatan-s-Legal-Works-In-Progress

./: README.md
luma-cloud/: .env.example  README.md  package.json
luma-cloud/cli/: pyproject.toml
luma-cloud/cli/luma_cli/: main.py
luma-cloud/infra/: docker-compose.yml
luma-cloud/server/: Dockerfile  package-lock.json  package.json  tsconfig.json
luma-cloud/server/src/: config.ts  index.ts
luma-cloud/server/src/middleware/: auth.ts
luma-cloud/server/src/routes/: auth.ts  files.ts  llm.ts
luma-cloud/server/src/services/: llm.ts  storage.ts
luma-cloud/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
luma-cloud/web/src/: App.tsx  i18n.ts  main.tsx
luma-cloud/web/src/components/: ChatAssistant.tsx  FileBrowser.tsx  LanguageToggle.tsx
